--- a/.github/workflows/increment-version.yaml
+++ b/.github/workflows/increment-version.yaml
@@ -16,7 +16,9 @@ jobs:
   increment-version:
     name: increment-version
     runs-on: ubuntu-latest
-
+    outputs:
+      version: ${{ steps.setversion.outputs.version }}
+      
     steps:
     - uses: actions/checkout@v3
       with:
