--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
     needs: increment-version
     steps:
       - env:
-          VERSION=${{needs.increment-version.outputs.version}}
+          VERSION: ${{needs.increment-version.outputs.version}}
         id: step1
         run: echo "The Next Version is $VERSION"
 
