--- a/.github/workflows/p2p.yaml
+++ b/.github/workflows/p2p.yaml
@@ -6,20 +6,23 @@ on:
       env_vars:
         required: false
     inputs:
-      env-name:
+      dev-env-name:
         required: true
         type: string
-      project-id:
+      dev-project-id:
         required: true
         type: string
-      project-number:
+      dev-project-number:
         required: true
         type: string
-      project-id-promote:
-        required: false
+      prod-env-name:
+        required: true
         type: string
-      project-number-promote:
-        required: false
+      prod-project-id:
+        required: true
+        type: string
+      prod-project-number:
+        required: true
         type: string
       tenant-name:
         required: true
@@ -46,28 +49,28 @@ on:
         default: ''
 
 env:
-  SERVICE_ACCOUNT: p2p-${{ inputs.tenant-name }}@${{ inputs.project-id }}.iam.gserviceaccount.com
-  SERVICE_ACCOUNT_PROMOTE: p2p-${{ inputs.tenant-name }}@${{ inputs.project-id-promote }}.iam.gserviceaccount.com
-  WORKLOAD_IDENTITY_PROVIDER: projects/${{ inputs.project-number }}/locations/global/workloadIdentityPools/p2p-${{ inputs.tenant-name }}/providers/p2p-${{ inputs.tenant-name }}
-  WORKLOAD_IDENTITY_PROVIDER_PROMOTE: projects/${{ inputs.project-number-promote }}/locations/global/workloadIdentityPools/p2p-${{ inputs.tenant-name }}/providers/p2p-${{ inputs.tenant-name }}
+  DEV_SERVICE_ACCOUNT: p2p-${{ inputs.tenant-name }}@${{ inputs.dev-project-id }}.iam.gserviceaccount.com
+  PROD_SERVICE_ACCOUNT: p2p-${{ inputs.tenant-name }}@${{ inputs.prod-project-id }}.iam.gserviceaccount.com
+  DEV_IDENTITY_PROVIDER: projects/${{ inputs.dev-project-number }}/locations/global/workloadIdentityPools/p2p-${{ inputs.tenant-name }}/providers/p2p-${{ inputs.tenant-name }}
+  PROD_WORKLOAD_IDENTITY_PROVIDER: projects/${{ inputs.prod-project-number }}/locations/global/workloadIdentityPools/p2p-${{ inputs.tenant-name }}/providers/p2p-${{ inputs.tenant-name }}
 
 
 jobs:
   setup:
     runs-on: ubuntu-latest
     outputs:
-      workflow_identity_provider: ${{ steps.setup.outputs.workflow_identity_provider }}
-      service_account: ${{ steps.setup.outputs.service_account }}
-      workflow_identity_provider_promote: ${{ steps.setup.outputs.workflow_identity_provider_promote }}
-      service_account_promote: ${{ steps.setup.outputs.service_account_promote }}
+      dev_workflow_identity_provider: ${{ steps.setup.outputs.dev_workflow_identity_provider }}
+      prod_workflow_identity_provider: ${{ steps.setup.outputs.prod_workflow_identity_provider }}
+      dev_service_account: ${{ steps.setup.outputs.dev_service_account }}
+      prod_service_account: ${{ steps.setup.outputs.prod_service_account }}
     steps:
       - name: Setup inputs passed to the reusable workflow
         id: setup
         run: |
-          echo "workflow_identity_provider=$WORKLOAD_IDENTITY_PROVIDER" >> $GITHUB_OUTPUT
-          echo "workflow_identity_provider_promote=$WORKLOAD_IDENTITY_PROVIDER_PROMOTE" >> $GITHUB_OUTPUT
-          echo "service_account=$SERVICE_ACCOUNT" >> $GITHUB_OUTPUT
-          echo "service_account_promote=$SERVICE_ACCOUNT_PROMOTE" >> $GITHUB_OUTPUT
+          echo "dev_workflow_identity_provider=$DEV_WORKLOAD_IDENTITY_PROVIDER" >> $GITHUB_OUTPUT
+          echo "prod_workflow_identity_provider=$PROD_WORKLOAD_IDENTITY_PROVIDER" >> $GITHUB_OUTPUT
+          echo "dev_service_account=$DEV_SERVICE_ACCOUNT" >> $GITHUB_OUTPUT
+          echo "prod_service_account=$PROD_SERVICE_ACCOUNT" >> $GITHUB_OUTPUT
   build:
     needs: [setup]
     uses: coreeng/p2p/.github/workflows/execute-command.yaml@main
@@ -75,44 +78,58 @@ jobs:
       env_vars: ${{ secrets.env_vars }}
     with:
       command: p2p-build
-      env-name: ${{ inputs.env-name }}
-      workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
-      service-account: ${{ needs.setup.outputs.service_account }}
-      project-id: ${{ inputs.project-id }}
+      env-name: ${{ inputs.dev-env-name }}
+      workload-identity-provider: ${{ needs.setup.outputs.dev_workflow_identity_provider }}
+      service-account: ${{ needs.setup.outputs.dev_service_account }}
+      project-id: ${{ inputs.dev-project-id }}
       dry-run: ${{ inputs.dry-run }}
       pre-targets: ${{ inputs.pre-targets }}
       post-targets: ${{ inputs.post-targets }}
 
-  promote:
-    name: promote
+  promote-extended-tests:
+    name: promote-extended-tests
     needs: [build, setup]
-    if: inputs.project-id-promote != '' 
     secrets:
       env_vars: ${{ secrets.env_vars }}
     uses: coreeng/p2p/.github/workflows/promote-image.yaml@promote
     with:
-      command: promote-build
-      workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
-      workload-identity-provider-promote: ${{ needs.setup.outputs.workflow_identity_provider_promote }}
-      service-account: ${{ needs.setup.outputs.service_account }}
-      service-account-promote: ${{ needs.setup.outputs.service_account_promote }}
-      registry-from: ${{ inputs.region }}-docker.pkg.dev/${{ inputs.project-id }}/tenant
-      registry-to: ${{ inputs.region }}-docker.pkg.dev/${{ inputs.project-id-promote }}/tenant
+      promotion-stage: extended-tests
+      dev-workload-identity-provider: ${{ needs.setup.outputs.dev_workflow_identity_provider }}
+      prod-workload-identity-provider: ${{ needs.setup.outputs.prod_workflow_identity_provider }}
+      dev-service-account: ${{ needs.setup.outputs.dev_service_account }}
+      prod-service-account: ${{ needs.setup.outputs.prod_service_account }}
+      dev-registry: ${{ inputs.region }}-docker.pkg.dev/${{ inputs.dev-project-id }}/tenant
+      prod-registry: ${{ inputs.region }}-docker.pkg.dev/${{ inputs.prod-project-id }}/tenant
       dry-run: ${{ inputs.dry-run }}
-      pre-targets: ${{ inputs.pre-targets }}
-      post-targets: ${{ inputs.post-targets }}
+
+    promote-prod:
+    name: promote-prod
+    needs: [promote-extended-tests, setup]
+    secrets:
+      env_vars: ${{ secrets.env_vars }}
+    uses: coreeng/p2p/.github/workflows/promote-image.yaml@promote
+    with:
+      promotion-stage: prod
+      dev-workload-identity-provider: ${{ needs.setup.outputs.dev_workflow_identity_provider }}
+      prod-workload-identity-provider: ${{ needs.setup.outputs.prod_workflow_identity_provider }}
+      dev-service-account: ${{ needs.setup.outputs.dev_service_account }}
+      prod-service-account: ${{ needs.setup.outputs.prod_service_account }}
+      dev-registry: ${{ inputs.region }}-docker.pkg.dev/${{ inputs.dev-project-id }}/tenant
+      prod-registry: ${{ inputs.region }}-docker.pkg.dev/${{ inputs.prod-project-id }}/tenant
+      promotion-stage: prod
+      dry-run: ${{ inputs.dry-run }}
 
   functional-test:
-    needs: [promote, setup]
+    needs: [promote-prod, setup]
     uses: coreeng/p2p/.github/workflows/execute-command.yaml@main
     secrets:
       env_vars: ${{ secrets.env_vars }}
     with:
       command: p2p-functional
-      env-name: ${{ inputs.env-name }}
-      workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
-      service-account: ${{ needs.setup.outputs.service_account }}
-      project-id: ${{ inputs.project-id }}
+      env-name: ${{ inputs.dev-env-name }}
+      workload-identity-provider: ${{ needs.setup.outputs.dev_workflow_identity_provider }}
+      service-account: ${{ needs.setup.outputs.dev_service_account }}
+      project-id: ${{ inputs.dev-project-id }}
       dry-run: ${{ inputs.dry-run }}
       pre-targets: ${{ inputs.pre-targets }}
       post-targets: ${{ inputs.post-targets }}
@@ -125,10 +142,10 @@ jobs:
     uses: coreeng/p2p/.github/workflows/execute-command.yaml@main
     with:
       command: p2p-nft
-      env-name: ${{ inputs.env-name }}
-      workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
-      service-account: ${{ needs.setup.outputs.service_account }}
-      project-id: ${{ inputs.project-id }}
+      env-name: ${{ inputs.dev-env-name }}
+      workload-identity-provider: ${{ needs.setup.outputs.dev_workflow_identity_provider }}
+      service-account: ${{ needs.setup.outputs.dev_service_account }}
+      project-id: ${{ inputs.dev-project-id }}
       dry-run: ${{ inputs.dry-run }}
       pre-targets: ${{ inputs.pre-targets }}
       post-targets: ${{ inputs.post-targets }}
@@ -142,10 +159,10 @@ jobs:
     uses: coreeng/p2p/.github/workflows/execute-command.yaml@main
     with:
       command: p2p-dev
-      env-name: ${{ inputs.env-name }}
-      workload-identity-provider: ${{ needs.setup.outputs.workflow_identity_provider }}
-      service-account: ${{ needs.setup.outputs.service_account }}
-      project-id: ${{ inputs.project-id }}
+      env-name: ${{ inputs.dev-env-name }}
+      workload-identity-provider: ${{ needs.setup.outputs.dev_workflow_identity_provider }}
+      service-account: ${{ needs.setup.outputs.dev_service_account }}
+      project-id: ${{ inputs.dev-project-id }}
       dry-run: ${{ inputs.dry-run }}
       pre-targets: ${{ inputs.pre-targets }}
       post-targets: ${{ inputs.post-targets }}
