--- a/.github/workflows/promote-image.yaml
+++ b/.github/workflows/promote-image.yaml
@@ -93,12 +93,8 @@ jobs:
         if: inputs.promotion-stage == 'prod'
         id: run-prepare-promotion
         run: |
-          task=$(shell make | grep -E 'p2p-prepare-promotion-${{ inputs.promotion-stage }}')
-          if [ -n "$task" ]; then
-              make p2p-prepare-promotion-${{ inputs.promotion-stage }}
-          else
-              echo "Prepare promotion step does not exist. Skipping..."
-          fi
+          [[ -n $(make | grep -E 'p2p-prepare-promotion-${{ inputs.promotion-stage }}' ) ]] && make p2p-prepare-promotion-${{ inputs.promotion-stage }} || echo "Prepare promotion step does not exist. Skipping..."
+          
 
       - name: Authenticate to Google Cloud Prod
         id: auth-prod
