--- a/.github/workflows/promote-image.yaml
+++ b/.github/workflows/promote-image.yaml
@@ -90,13 +90,13 @@ jobs:
           password: ${{ steps.auth-dev.outputs.access_token }}
 
       - name: Check if prepare promotion task exists
-        if: inputs.promotion-stage == 'prod'
         id: run-check-prepare-promotion
         run: |
-          echo "prepare-promotion-task=$(make | grep -E 'p2p-prepare-promotion-${{ inputs.promotion-stage }}')" >> $GITHUB_OUTPUT
+          echo "prepare_promotion_task=$(make | grep -E 'p2p-prepare-promotion-${{ inputs.promotion-stage }}')" >> $GITHUB_OUTPUT
+          cat $GITHUB_OUTPUT
 
       - name: Run Prepare Promotion
-        if: inputs.promotion-stage == 'prod' && steps.run-check-prepare-promotion.outputs.prepare-promotion-task  != ''
+        if: steps.run-check-prepare-promotion.outputs.prepare_promotion_task  != ''
         id: run-prepare-promotion
         run: |
           make p2p-prepare-promotion-${{ inputs.promotion-stage }}
